package de.jquast.adapters.facade.dto;

public record ActionDto(int id, String name, String description) {
}
